--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li><a href="./index.html">Accounting</a></li>
         </ul>
     </header>
+    <main>
+    
+    </main>
     <footer>
         <div class="social">
             <i class="fa-brands fa-facebook"></i>
