--- a/accounting.html
+++ b/accounting.html
@@ -14,7 +14,7 @@
     <header>
         <ul>
             <li><a href="./index.html">Home</a> </li>
-            <li><a href="./index.html">Accounting</a></li>
+            <li><a href="./accounting.html">Accounting</a></li>
         </ul>
     </header>
     <footer>
@@ -26,6 +26,5 @@
             &copy; 2022 Accounting world
         </p>
     </footer>
-    <script src="./app.js"></script>
 </body>
 </html>
